--- a/src/components/frontDesign/video/Control.css
+++ b/src/components/frontDesign/video/Control.css
@@ -6,7 +6,7 @@
     right: 0;
     left: 0;
     flex-direction: column;
-    z-index: 1;
+    z-index: 0;
     display: flex;
     justify-content: space-between;
  }
@@ -49,7 +49,7 @@
     width: 50%;
  }
  
- span {
+ .control_Container > span {
     color: #9556cc;
     font-size: 0.8rem;
     margin-left: 10px;
