--- a/src/components/frontDesign/video/Video.css
+++ b/src/components/frontDesign/video/Video.css
@@ -4,10 +4,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  z-index: 30;
 }
 
 .player__wrapper {
   position: relative;
+  z-index: 20;
 }
 
 .player {
