--- a/src/components/frontDesign/video/Control.css
+++ b/src/components/frontDesign/video/Control.css
@@ -26,7 +26,7 @@
  
  .icon__btn {
     padding: 0 10px;
-    color: #7b2cbf;
+    color: white;
  }
  
  .slider__container {
@@ -50,7 +50,7 @@
  }
  
  .control_Container > span {
-    color: #9556cc;
+    color: white;
     font-size: 0.8rem;
     margin-left: 10px;
  }
