another fix for authentication

--- a/src/components/frontDesign/video/Control.css
+++ b/src/components/frontDesign/video/Control.css
@@ -60,10 +60,7 @@
   align-items: center;
  }
 
- .css-1fkkb0b-MuiSlider-root {
-   color: white !important;
- }
 
- .css-188mx6n-MuiSlider-root{
+ .MuiSlider-root{
    color: white !important
  }
